--- a/Gamoitsani/Resources/Localization/en.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/en.lproj/Localizable.strings
@@ -78,6 +78,7 @@
 "screen.game_details.storage_warning.title" = "Insufficient storage";
 "screen.game_details.storage_warning.message" = "Failed to download words, please try again";
 "screen.game_details.super_word.description" = "Random super word (3 Points)";
+"screen.game_details.random_challenge.description" = "Random challenge for team";
 
 // Teams
 "screen.game_details.teams.add_placeholder" = "Add teams to start playing";
@@ -121,6 +122,7 @@
 "screen.game.winning_view.description" = "You won with %@ points";
 "screen.game.game_share_view.title" = "The winning team is %@ 🥳";
 "screen.game.arcade.skipButton" = "New words (-2 points)";
+"screen.game.game_challenge_view.header" = "Random challenge for team";
 
 // MARK: - Game Scoreboard
 "screen.game_scoreboard.title" = "Scoreboard";
