--- a/Gamoitsani/Resources/Localization/ru.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/ru.lproj/Localizable.strings
@@ -78,6 +78,7 @@
 "screen.game_details.storage_warning.title" = "Недостаточно памяти";
 "screen.game_details.storage_warning.message" = "Не удалось загрузить слова, пожалуйста, попробуйте еще раз";
 "screen.game_details.super_word.description" = "Случайное супер-слово (3 Очка)";
+"screen.game_details.random_challenge.description" = "Случайное испытание для команды";
 
 // Teams
 "screen.game_details.teams.add_placeholder" = "Добавьте команды, чтобы начать игру";
@@ -121,6 +122,7 @@
 "screen.game.winning_view.description" = "Вы выиграли с %@ очками";
 "screen.game.game_share_view.title" = "Победившая команда - %@ 🥳";
 "screen.game.arcade.skipButton" = "Новые слова (-2 очка)";
+"screen.game.game_challenge_view.header" = "Случайное испытание для команды";
 
 // MARK: - Game Scoreboard
 "screen.game_scoreboard.title" = "Таблица результатов";
