--- a/Gamoitsani/Resources/Localization/uk.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/uk.lproj/Localizable.strings
@@ -78,6 +78,7 @@
 "screen.game_details.storage_warning.title" = "Недостатньо пам’яті";
 "screen.game_details.storage_warning.message" = "Не вдалося завантажити слова, спробуйте ще раз";
 "screen.game_details.super_word.description" = "Випадкове супер слово (3 бали)";
+"screen.game_details.random_challenge.description" = "Випадковий виклик для команди";
 
 // Teams
 "screen.game_details.teams.add_placeholder" = "Додайте команди, щоб почати гру";
@@ -121,6 +122,7 @@
 "screen.game.winning_view.description" = "Ви перемогли з %@ балами";
 "screen.game.game_share_view.title" = "Команда-переможець - %@ 🥳";
 "screen.game.arcade.skipButton" = "Нові слова (-2 бали)";
+"screen.game.game_challenge_view.header" = "Випадковий виклик для команди";
 
 // MARK: - Game Scoreboard
 "screen.game_scoreboard.title" = "Результати";
