Add functionality to enable game recording during gameplay

--- a/Gamoitsani/Resources/Localization/az.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/az.lproj/Localizable.strings
@@ -141,3 +141,7 @@
 // MARK: - Game Share
 "screen.game_share.title" = "Xalı paylaş!";
 "screen.game_share.share_to" = "Buraya paylaş";
+
+// MARK: - Game Play
+"screen.game_play.alert.stop_recording.title" = "Qeydiyyatı Dayandırmaq?";
+"screen.game_play.alert.stop_recording.message" = "Cari qeydiyyatı dayandırmaq istədiyinizə əminsiniz?";
