--- a/Gamoitsani/Resources/Localization/ru.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/ru.lproj/Localizable.strings
@@ -141,3 +141,7 @@
 // MARK: - Game Share
 "screen.game_share.title" = "Поделиться результатом!";
 "screen.game_share.share_to" = "Поделиться в";
+
+// MARK: - Game Play
+"screen.game_play.alert.stop_recording.title" = "Остановить запись?";
+"screen.game_play.alert.stop_recording.message" = "Вы уверены, что хотите остановить текущую запись?";
