--- a/Gamoitsani/Resources/Localization/uk.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/uk.lproj/Localizable.strings
@@ -141,3 +141,7 @@
 // MARK: - Game Share
 "screen.game_share.title" = "Поділитися результатом!";
 "screen.game_share.share_to" = "Поділитися через";
+
+// MARK: - Game Play
+"screen.game_play.alert.stop_recording.title" = "Зупинити запис?";
+"screen.game_play.alert.stop_recording.message" = "Ви впевнені, що хочете зупинити поточний запис?";
